# amplifier-module-hooks-scheduler-heuristic

./: README.md  pyproject.toml
amplifier_mod_hooks_scheduler_heuristic/: __init__.py
amplifier_mod_hooks_scheduler_heuristic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
amplifier_module_hooks_scheduler_heuristic/: __init__.py
tests/: test_behavioral.py  test_validation.py
