[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-module-hooks-scheduler-heuristic"
version = "1.0.0"
description = "Heuristic scheduler for Amplifier event-driven orchestration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "amplifier-core>=1.0.0",
]

[project.entry-points."amplifier.modules"]
hooks-scheduler-heuristic = "amplifier_mod_hooks_scheduler_heuristic:mount"